--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -19,10 +19,10 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Install aqtinstall
+    - name: Install latest aqtinstall
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install aqtinstall==3.1.*
+        python -m pip install --upgrade aqtinstall
 
     - name: List available Qt modules for 6.6.0 on Windows
       run: python -m aqt list-qt windows desktop --version 6.6.0 --arch win64_msvc2019_64
