--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Install latest aqtinstall
+    - name: Install latest aqtinstall (optional)
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install --upgrade aqtinstall
