--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -23,6 +23,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install --upgrade aqtinstall
+    - name: List available Qt modules for 6.6.0 on Windows MSVC2019 64-bit
+      run: python -m aqt list-qt windows desktop --modules 6.6.0 win64_msvc2019_64
+
 
     - name: Install Qt 6.6.0 with required modules
       uses: jurplel/install-qt-action@v3
