--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -37,5 +37,5 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -G "Visual Studio 16 2019" -A x64 -DCMAKE_PREFIX_PATH="${{ github.workspace }}\Qt\6.6.0\msvc2019_64"
+        cmake .. -G "Visual Studio 17 2022" -DCMAKE_PREFIX_PATH="D:/a/Sobriquet/Qt/Qt/6.6.0/msvc2019_64"
         cmake --build . --config Release
