--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -35,5 +35,5 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -G "Visual Studio 17 2022" -DCMAKE_PREFIX_PATH="${{ github.workspace }}/Qt/6.6.0/msvc2022_64"
+        cmake .. -G "Visual Studio 17 2022" -DCMAKE_PREFIX_PATH="${{ github.workspace }}/Qt/Qt/6.6.0/msvc2022_64"
         cmake --build . --config Release
